--- a/src/pages/Share/Share.css
+++ b/src/pages/Share/Share.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: calc(100vh - 180px);
+  height: calc(100vh - 204px);
   padding: 0 8px;
 }
 
@@ -188,7 +188,7 @@
 /* Responsive */
 @media (max-width: 640px) {
   .share-page {
-    height: calc(100vh - 160px);
+    height: calc(100vh - 178px);
   }
 
   .share-tickers-grid {
